--- a/vignettes/use_ddm_models.Rmd
+++ b/vignettes/use_ddm_models.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Creating Drift Diffusion Models with dRiftDM"
+title: "use_ddm_models"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{create_ddm_models}
+  %\VignetteIndexEntry{use_ddm_models}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -15,8 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-suppressPackageStartupMessages(library(dRiftDM))
+library(dRiftDM)
 ```
 
-
-Here we document how to create drift diffusion models with `dRiftDM`. 
+TO BE DONE
