--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -20,7 +20,7 @@
   doi = {10.1016/j.cogpsych.2015.02.005}
 }
 
-@article{whiteetal.2011,
+@article{Whiteetal.2011,
   title={Diffusion models of the flanker task: Discrete versus gradual attentional selection},
   author={White, Corey N and Ratcliff, Roger and Starns, Jeffrey J},
   journal={Cognitive psychology},
