--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,5 +1,5 @@
 @article{Richteretal.2023,
-  title={Diffusion models with time-dependent parameters: an analysis of computational effort and accuracy of different numerical methods},
+  title={Diffusion models with time-dependent parameters: An analysis of computational effort and accuracy of different numerical methods},
   author={Richter, Thomas and Ulrich, Rolf and Janczyk, Markus},
   journal={Journal of Mathematical Psychology},
   volume={114},
