--- a/README.Rmd
+++ b/README.Rmd
@@ -12,24 +12,29 @@ knitr::opts_chunk$set(
 )
 ```
 
-# dRiftDM
+<!-- badges: start -->
+[![Codecov test coverage](https://codecov.io/gh/bucky2177/dRiftDM/graph/badge.svg)](https://app.codecov.io/gh/bucky2177/dRiftDM)
+<!-- badges: end -->
 
-The package dRiftDM was developed to help psychological researchers apply and fit diffusion models to empirical data in the R environment. The most important feature is that dRiftDM can also handle non-stationary problems, that is, diffusion models with time-dependent parameters. The package comes with necessary tools for standard analyses, such as building a model, estimating parameters for multiple participants (separately per participant), or creating summary statistics. Pre-built models that are available within the package are: 
+# dRiftDM <img src="man/figures/logo.png" align="right" height="138" alt="" />
+
+
+The package dRiftDM was developed to assist psychological researchers in applying and fitting diffusion models to empirical data within the R environment. Its most important feature is the ability to handle non-stationary problems, specifically diffusion models with time-dependent parameters. The package includes essential tools for standard analyses, such as building models, estimating parameters for multiple participants (individually for each participant), and creating summary statistics. The pre-built models available in the package include:
 
 - The Standard (Ratcliff) Diffusion Model (Ratcliff, 1978, Psychological Review)
 - The Diffusion Model for Conflict Tasks (Ulrich et al., 2015, Cognitive Psychology)
 - The Shrinking Spotlight Model  (White et al., 2011, Cognitive Psychology)
 
-Users can flexibly create other models and use the machinery of dRiftDM for estimating them. 
+Users can flexibly create custom models and utilize the dRiftDM machinery for estimating them.
 
-With Version 0.2.0 model predictions (i.e., their first-passage time) are derived by numerically solving the Kolmogorov-Forward-Equation or a coupled set of integral equations, based on code provided by Richter et al. (2023, Journal of Mathematical Psychology. 
+Starting with version 0.2.0, model predictions (i.e., first-passage times) are derived by numerically solving the Kolmogorov-Forward Equation or a coupled set of integral equations, based on code provided by Richter et al. (2023, Journal of Mathematical Psychology).
 
 
 ## Notes
 
-The current version is 0.2.0. In contrast to the former version 0.1.1, version 0.2.0 leverages more strongly the S3 object system. We also introduced a new way to handle parameters across conditions using so-called "flex_prms" objects. 
+The current version is 0.2.0. Compared to the previous version (0.1.1), version 0.2.0 makes greater use of the S3 object system. Additionally, it introduces a new method for handling parameters across conditions using "flex_prms" objects.
 
-If you want install the old version 0.1.1. You can use: 
+If you wish to install the older version (0.1.1), you can use:
 
 ```{r, eval = F}
 devtools::install_github("bucky2177/dRiftDM", ref = "0.1.1")
@@ -37,7 +42,7 @@ devtools::install_github("bucky2177/dRiftDM", ref = "0.1.1")
 
 ## Installation
 
-You can install the (current) development version of dRiftDM from [GitHub](https://github.com/) with:
+You can install the development version of dRiftDM from [GitHub](https://github.com/) with:
 
 ```{r, eval = F}
 # install.packages("devtools")
@@ -46,7 +51,7 @@ devtools::install_github("bucky2177/dRiftDM")
 
 ## Example
 
-We are in the progress of publishing a tutorial with more detailed instructions (see the respective [OSF pre-print](https://osf.io/preprints/osf/3t2vf). For now, here is an example on how to fit the Diffusion Model for Conflict Tasks to some synthetic data using bounded Nelder-Mead:
+We are in the process of publishing a tutorial with more detailed instructions (see the respective [OSF pre-print](https://osf.io/preprints/osf/3t2vf)). For now, here is an example of how to fit the Diffusion Model for Conflict Tasks to some synthetic data using bounded Nelder-Mead:
 
 ```{r example}
 library(dRiftDM)
