patch to fix CRAN requirements
-> most important change is that estimate_model_ids doesn't have a default path for saving fits

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ Starting with version 0.2.0, model predictions (i.e., first-passage times) are d
 
 ## Notes
 
-The current version is 0.2.0. Compared to the previous version (0.1.1), version 0.2.0 makes greater use of the S3 object system. Additionally, it introduces a new method for handling parameters across conditions using "flex_prms" objects.
+Compared to the previous version 0.1.1, versions >0.2.0 make greater use of the S3 object system. Additionally, beginning with version 0.2.0, models use "flex_prms" objects to handle parameters across conditions.
 
 If you wish to install the older version (0.1.1), you can use:
 
