- new vignettes - and print and summary functions for coefs_dm

--- a/vignettes/REFERENCES.bib
+++ b/vignettes/REFERENCES.bib
@@ -43,3 +43,14 @@
   publisher={American Psychological Association},
   doi={10.1037/0033-295X.85.2.59}
 }
+
+
+@article{Koobetal.2023,
+  title={The role of task-relevant and task-irrelevant information in congruency sequence effects: Applying the diffusion model for conflict tasks},
+  author={Koob, Valentin and Mackenzie, Ian and Ulrich, Rolf and Leuthold, Hartmut and Janczyk, Markus},
+  journal={Cognitive Psychology},
+  volume={140},
+  pages={101528},
+  year={2023},
+  publisher={Elsevier}
+}
