updated readme.rmd file

--- a/README.Rmd
+++ b/README.Rmd
@@ -56,25 +56,10 @@ The [CRAN](https://cran.r-project.org/) version can be installed with:
 install.packages("dRiftDM")
 ```
 
-## Example
+## How to use dRiftDM
 
-We are in the process of publishing a tutorial with more detailed instructions (see the respective [OSF pre-print](https://osf.io/preprints/osf/3t2vf)). For now, here is an example of how to fit the Diffusion Model for Conflict Tasks to synthetic data using bounded Nelder-Mead:
+If you are interested in getting started with dRiftDM, we recommend reading the [OSF pre-print](https://osf.io/preprints/osf/3t2vf). More information on functions and model customization can be found in dRiftDM's vignettes. These vignettes are also rendered in the "Getting started" and "Articles" tabs on our [Github.io page](https://bucky2177.github.io/dRiftDM/).
 
-```{r example}
-library(dRiftDM)
-dmc_model <- dmc_dm(dx = .002, dt = .002, t_max = 1.2)
-obs_data(dmc_model) <- dmc_synth_data
-print(dmc_model)
-```
-
-```{r, eval = F}
-est_model <- estimate_model(
-  drift_dm_obj = dmc_model, # a model
-  lower = c(2, 0.4, 0.2, 0.005, 0.02, 0.02, 2), # lower boundary - search space
-  upper = c(6, 0.8, 0.5, 0.050, 0.12, 0.30, 7), # upper boundary - search space
-  verbose = 2, # print out each evaluation
-  use_de_optim = F, use_nmkb = T # use Nelder-Mead for demonstration
-)
-```
+If you have any questions, feel free to contact us!
 
 
