--- a/vignettes/dRiftDM.Rmd
+++ b/vignettes/dRiftDM.Rmd
@@ -20,9 +20,10 @@ set.seed(1014)
 
 When working with drift-diffusion models (DDMs) you probably want to:
 
-* Build or select an existing model
+* Build an new or select an existing model
 
 * Explore the model behavior and validate the model's reliability
+<!--@Vali Was ist mit Reliability gemeint?!-->
 
 * Fit the model to data
 
@@ -37,11 +38,12 @@ The dRiftDM package helps you to do this:
 * With efficient algorithms to derive the model predictions [see @Richteretal.2023]
 
 
-The pre-built models currently available are: 
+Three pre-built models are currently available: 
 
 * The Ratcliff Diffusion Model [see `ratcliff_dm()`, @Ratcliff1978] 
 
 * The Diffusion Model for Conflict Tasks [see `dmc_dm()`, @Ulrichetal.2015]
+<!--@Vali: hier vielleicht auch noch auf den Comment zu RDMC verweisen?-->
 
 * The Shrinking Spotlight Model [see `ssp_dm()`, @Whiteetal.2011]
 
@@ -51,7 +53,7 @@ This document introduces you to dRiftDM, focusing on first steps in exploring an
 
 ## An Examplary Model
 
-To explore some of the basic functions of dRiftDM, we'll use the Diffusion Model for Conflict Tasks (DMC). It is a diffusion model commonly employed in the context of cognitive psychology. 
+To explore some of the basic functions of dRiftDM, we'll use the Diffusion Model for Conflict Tasks (DMC). It is a diffusion model commonly employed in the context of cognitive psychology. To create the model, the pre-built function `dmc_fun()` is assigned a custom name that represents the model: <!--@Vali: Den letzten Satz hab ich ergänzt. Passt der so?--> 
 
 ```{r}
 ddm <- dmc_dm()
@@ -69,13 +71,13 @@ Here we get a glimpse on the underlying structure of any model created with dRif
 
 - The model is of type `dmc_dm`
 
-- The model has the parameters `muc`, `b`, ..., `alpha`, and the parameter values across conditions are shown under `Current Parameter Matrix`.
+- The model has the parameters `muc`, `b`, ..., `alpha`, and the current parameter values for each conditions are shown under `Current Parameter Matrix`.
 
-- Below this, under `Unique Parameters`, we obtain how each parameter behaves across conditions. If a number is the same for a parameter across conditions, this means that this parameter is equated across conditions. For example, the parameter `muc` is assumed to be identical across the conditions `comp` and `incomp`. If a number is zero, this means that this parameter is assumed to be "fixed" and thus is not a "free" parameter that can be estimated. If an entry shows a "d", this means there is a special dependency, as listed under `Special Dependencies` (see `vignette("customize_ddms", "dRiftDM")` for more information). 
+- Below this, under `Unique Parameters`, we obtain how each parameter behaves across conditions. If a number is the same for a parameter across conditions, this means that this parameter is equated across conditions. For example, the parameter `muc` is assumed to be identical for the conditions `comp` and `incomp`. If a number is zero, this means that this parameter is assumed to be "fixed" and thus is not a "free" parameter that can be estimated. If an entry shows a "d", this means there is a special dependency, as listed under `Special Dependencies` (see `vignette("customize_ddms", "dRiftDM")` for more information). 
 <!--^[comp and incomp stand for compatible and incompatible, the two experimental conditions common to all conflict tasks. In a conflict task, participants perform a task while being presented with irrelevant, distracting information. For example, they have to respond to a single letter surrounded by irrelevant, flanking letters. In compatible vs. incompatible trials, the distracting information matches vs. mismatches with the task-relevant information, respectively.]-->
 
 
-- When fitting or exploring a model, we will have to derive the model predictions in terms of the first-passage-time (i.e., the duration of central response selection in the context of psychology). The settings for this are shown under `Deriving PDFs`. Currently, predictions are derived by a numerical discretization of the Kolmogorov-Forward-Equation (`kfe`). The diffusion constant `sigma` is 1. The maximum time space is 3 seconds. And the discretization in time and space is done in steps of 0.001. 
+- When fitting or exploring a model, we will have to derive the model predictions in terms of the first-passage-times (i.e., the duration of central response selection in the context of psychology). The settings for this are shown under `Deriving PDFs`. Currently, predictions are derived by a numerical discretization of the Kolmogorov-Forward-Equation (`kfe`). The diffusion constant `sigma` is 1, the maximum time space is 3 seconds, and the discretization in time and space is done in steps of 0.001. 
 
 
 # Exploring a Model
@@ -90,7 +92,7 @@ To explore a model, dRiftDM provides:
 
 Realizations of a diffusion process, that is, single evidence accumulation *traces* for central response selection, are common ways to visualize a diffusion model. The first argument requires the model object. The second argument requires the number of realizations to simulate.
 
-For example, we can simulate 5 traces for DMC per condition like this: 
+For example, we can simulate 5 traces for DMC per condition: 
 
 ```{r}
 five_traces <- simulate_traces(object = ddm, k = 5)
@@ -111,7 +113,7 @@ We can easily visualize these traces by calling the generic `plot()` method:
 plot(five_traces, col = c("green", "red"))
 ```
 
-When visualizing the basic model behavior, one often wants to display the expected time-course of the diffusion process. We can do so by eliminating the stochastic noise, setting the argument `sigma = 0`. 
+When visualizing the basic model behavior, one often wants to display the expected time-course of the diffusion process. We can do so by eliminating the stochastic noise with setting the argument `sigma = 0`. 
 
 ```{r}
 exp_behavior <- simulate_traces(object = ddm, k = 1, sigma = 0)
@@ -122,7 +124,7 @@ plot(exp_behavior, col = c("green", "red"))
 
 ## `calc_stats()`
 
-A DDM predicts response choice and response times, with the latter being the sum of the first-passage-time (i.e., the duration of central response selection) and the non-decision time. We can request summary statistics of this prediction with `calc_stats()`. The first argument requires the model object. The second argument a character vector, specifying the `type` of summary statistic. 
+A DDM predicts response choices and response times, with the latter being the sum of the first-passage-time (i.e., the duration of central response selection) and the non-decision time. We can request summary statistics of this prediction with `calc_stats()`. The first argument requires the model object. The second argument a character vector, specifying the `type` of summary statistic. 
 
 In the context of cognitive psychology, quantiles and so-called Conditional Accuracy Functions (CAFs) are common ways to summarize the model predictions:
 
@@ -140,6 +142,7 @@ plot(sum_stats, col = c("green", "red"))
 # Changing Model Properties
 
 To get or set properties of the model, dRiftDM provides accessor/replacement methods for:
+<!--@Vali: müsste es hier überall heißen accesses/replaces"?-->
 
 - `coef()` access/replace parameter values
 
@@ -199,6 +202,7 @@ prms_solve(ddm)
 solver(ddm)
 ```
 This shows the currently set method for deriving the model's predicted probability density functions of response time and choice. Currently supported options are `"kfe"` and `"im_zero"`. While the `"kfe"` method can be applied to all models in dRiftDM, `"im_zero"` is restricted to models that don't have a custom starting point.
+<!--@Vali: "custom starting point" vielleicht "can only be used when the starting point is fixed to zero"? oder so?-->
 
 ## `b_coding()`
 
@@ -247,9 +251,9 @@ Given a data set, the parameters of a model in dRiftDM are estimated via Differe
 
 The first argument requires the model. The second and third arguments are the lower and upper boundaries of the search space. Per default, Differential Evolution is used, as it is more robust. Yet, to ensure that this vignette runs quickly, we will use Nelder-Mead.
 
-A tricky choice regards the discretization settings. Per default, dRiftDM discretizes the time and evidence space in steps of 0.001. This is a conservative setting, ensuring high numerical accuracy. Yet, high numerical accuracy comes at the expense of a high computational burden that increases non-linearly. It is thus recommended to make the discretization more coarse to reduce the time waiting in front of the computer. As a rule of thumb, we currently recommend setting the discretization steps between 0.001 and 0.005. Yet, the impact of the respective settings depend on the model and its parameterization, so users will have to make sure that their discretization settings lead to reasonable model predictions. 
+A tricky choice regards the discretization settings. Per default, dRiftDM discretizes the time and evidence space in steps of 0.001. This is a conservative setting, ensuring high numerical accuracy. Yet, high numerical accuracy comes at the expense of a high computational burden that increases non-linearly. It is thus recommended to make the discretization more coarse to reduce the time waiting in front of the computer. As a rule of thumb, we currently recommend setting the discretization steps between 0.001 and 0.005. Yet, the impact of the respective settings depend on the model and its parameterization. As a consequence, users will have to make sure that their discretization settings lead to reasonable model predictions. 
 
-Another choice is the maximum time space. It should be large enough to easily cover the largest response time in the observed data set.
+Another choice is the maximum time space. It should be large enough to easily cover the longest response time in the observed data set.
 
 The following code adjusts the discretization settings, and subsequently fits DMC to a single data set.
 
@@ -283,7 +287,7 @@ coef(ddm)
 ## Checking Model Fit (1)
 
 
-To qualitatively check if a model fits the data, we can use `calc_stats()` in combination with the `plot()` method. 
+To qualitatively check if a model fits the data, we can use `calc_stats()` in combination with the `plot()` method. Circles indicate observed data while lines indicate the model's predictions.<!--@Vali: letzten Satz hinzugefügt-->
 
 ```{r}
 check_fit <- calc_stats(object = ddm, type = c("cafs", "quantiles"))
@@ -293,7 +297,7 @@ plot(check_fit, col = c("green", "red"))
 
 ## `estimate_model_ids()`
 
-Oftentimes, we don't want to fit a model to a single individual, but to multiple individuals. For this, you can use `estimate_model_ids()`, which is a wrapper around `estimate_model()`. In the following code chunk we fit DMC to the first two individuals of the flanker data set provided by @Ulrichetal.2015.
+Oftentimes, we don't want to fit a model to a single individual, but to multiple individuals. For this, you can use `estimate_model_ids()`, which is a wrapper around `estimate_model()`. In the following code chunk, we fit DMC to the first two individuals of the flanker data set provided by @Ulrichetal.2015 (included in `dRiftDM`).
 
 
 ```{r}
@@ -333,22 +337,22 @@ plot(check_fit, col = c("green", "red"))
 
 # Simulating Data
 
-To simulate data based on a model, we can use the `simulate_data()` function. The first argument takes the model object. The second argument a numeric vector, defining the number of trials per condition: 
+To simulate data based on a model, we can use the `simulate_data()` function. The first argument takes the model object. The second argument a numeric vector, defining the number of trials per condition: <!--@Vali: "numeric vector" aber im Beispiel ist kein Vektor?-->
 
 ```{r}
-ddm = ratcliff_dm() # a model for demonstration purpose
-sim_1 = simulate_data(object = ddm, n = 200)
+ddm <- ratcliff_dm() # a model for demonstration purpose
+sim_1 <- simulate_data(object = ddm, n = 200)
 head(sim_1)
 ```
 
-This returns a single synthetic data set for a "participant". Note that the simulated RTs depend on the time discretization. For example, if the time discretization is `dt` = .005, then the RTs can only differ in steps of .005. 
+This returns a single synthetic data set for one "participant". Note that the simulated RTs<!--@Vali: ich glaube vorher hast Du es immer ausgeschriebn?--> depend on the time discretization. For example, if the time discretization is `dt` = .005, then the RTs can only differ in steps of .005. 
 
 By specifying the argument `k`, we can simulate multiple synthetic data sets simultaneously. In this case, however, we must also specify lower and upper bounds to define the simulation space when drawing random parameter combinations per data set (see the `simulate_data` documentation for more details):
 
 ```{r}
-sim_2 = simulate_data(object = ddm, n = 200, k = 2,
-              lower = c(muc = 1, b = 0.4, non_dec = 0.2), 
-              upper = c(muc = 6, b = 0.8, non_dec = 0.4))
+sim_2 <- simulate_data(object = ddm, n = 200, k = 2,
+                       lower = c(muc = 1, b = 0.4, non_dec = 0.2), 
+                       upper = c(muc = 6, b = 0.8, non_dec = 0.4))
 ```
 This returns a list with the synthetic data sets and the corresponding parameter values:
 
